test/regress/coverage-textual-periodic-unbalanced.test
; Coverage for textual_xacts.cc lines 276-278: unbalanced periodic transaction

~ Monthly
    Expenses:Food    $100
    Assets:Cash      $50

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
Unbalanced remainder is:
                $150
Amount to balance against:
                $150
While parsing periodic transaction:
> ~ Monthly
>     Expenses:Food    $100
>     Assets:Cash      $50
Error: Transaction does not balance
end test
